added html structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,45 @@
     <title>Landing CDG</title>
     <link href="/dist/output.css" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
+
+        <div class="logo">
+
+        </div>
+
+        <nav class="menu">
+            <ul>
+                <li>Main</li>
+                <li>About</li>
+                <li>Get in touch</li>
+            </ul>
+        </nav>
 
     </header>
 
     <main class="main">
+        <section class="main">
 
+        </section>
+
+        <section class="about">
+
+
+        </section>
+
+        <section class="form">
+
+
+        </section>
     </main>
 
     <footer class="footer">
-
+        <div class="copyright">
+            © 2022 JetRuby. All Rights Reserved
+        </div>
     </footer>
 </body>
+
 </html>
